# bio-memex

./: .gitignore  NEW_MODELS_SUMMARY.md  README.md  STATE_SPECIFICATION.md  add_timestamp.py  analysis_events_result.json  batch_viewer.html  create_viewer.py  current_output.json  current_prompt.txt  demo_needle_haystack.py  enhanced_video_analysis_example.py  hello.py  myfile.json  needle_in_haystack_demo.py  objective_events_result.json  output.json  procedure_result.json  pyproject.toml  response.json  response_parsed.json  response_parsed2.json  response_parsed3.json  run_all_batches.py  test_new_models.py  video_analysis.json  video_analysis_output.json
label/: README.md  label.py  requirements.txt
opentrons_mcp/: opentrons.py
video_processing/: README.md  event_merger.py  hud_processing.ipynb  json_to_models.py  merged_timeline.json  opencv_hud_overlay.py  validated_analysis_events.json  validated_objective_events.json  validated_procedure.json  video_hud_overlay.py
video_understanding/: Video_understanding copy.ipynb  Video_understanding.ipynb  batch_cache.py  batch_viewer.py  final.ipynb  models.py  movie_generator.py  multi_prompts.py  needle_haystack_processor.py  prompts.py  simple_models.py  stateful_testing.ipynb  test_video copy.ipynb  test_video.ipynb  test_video2.ipynb  tester.py
