[project]
name = "bio-memex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.21.1",
    "mcp[cli]>=1.9.4",
    "openai>=1.90.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
]
